--- a/About.html
+++ b/About.html
@@ -54,7 +54,7 @@
             <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
           </div>
         </nav>
-        <img class="u-image u-image-default u-image-1" src="images/turquiselogo.jpg" alt="" data-image-width="2608" data-image-height="1057" data-lang-sv="">
+        <img class="u-image u-image-default u-image-1" src="images/turquiselogo1.webp" alt="" data-image-width="2608" data-image-height="1057" data-lang-sv="">
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-740f">
       <div class="u-clearfix u-sheet u-sheet-1"></div>
@@ -64,7 +64,7 @@
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-5942"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1" data-lang-en="Sample text. Click to select the Text Element." data-lang-sv="Sample text. Click to select the Text Element.">Sample text. Click to select the Text Element.</p>
+        <p class="u-small-text u-text u-text-variant u-text-1" data-lang-en="Sample text. Click to select the Text Element." data-lang-sv="Sample text. Click to select the Text Element.">Restaurang och pizzeria på Ljusterö Torg</p>
       </div></footer>
   
 </body></html>
