--- a/Ala-Carte.html
+++ b/Ala-Carte.html
@@ -82,10 +82,9 @@
         <div class="u-container-style u-expanded-width-sm u-expanded-width-xs u-group u-shape-rectangle u-group-1">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-custom-font u-text u-text-body-alt-color u-text-default-lg u-text-default-md u-text-default-sm u-text-default-xl u-text-1" data-lang-en="<span class=&quot;u-text-palette-3-base&quot;>​</span>discover <span class=&quot;u-text-palette-3-base&quot;>our menu</span>" data-lang-sv="<span class=&quot;u-text-palette-3-base&quot;>​</span>discover <span class=&quot;u-text-palette-3-base&quot;>our menu</span>">
-              <span class="u-text-palette-3-base"></span>
-              <span class="u-text-palette-3-base">Ala carte</span>
+              <span class="u-text-palette-3-base"> ALA CARTE</span>
               <span style="color: rgb(241, 197, 14);">&nbsp;</span>
-              <span class="u-text-white"> Meny</span>
+              <span class="u-text-white"> MENY</span>
               <span style="color: rgb(241, 197, 14);">&nbsp;</span>
             </h2>
           </div>
