--- a/Kebab.html
+++ b/Kebab.html
@@ -82,7 +82,7 @@
         <div class="u-container-style u-expanded-width-xs u-group u-shape-rectangle u-group-1">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-custom-font u-text u-text-body-alt-color u-text-1" data-lang-en="​<span class=&quot;u-text-palette-3-base&quot;>Address</span> and Hours" data-lang-sv="​<span class=&quot;u-text-palette-3-base&quot;>Address</span> and Hours">
-              <font color="#f1c50e">KEBAB</font>&nbsp;Meny
+              <font color="#f1c50e">KEBAB</font>&nbsp;MENY
             </h2>
             <p class="u-text u-text-white u-text-2" data-lang-sv="Sample text. Click to select the Text Element.">Kebabtallrik<br>
               <span class="u-text-palette-3-base">Kebabkött, pommes, isberg, tomat, lök, peperoni, röd och vit sås</span>
