--- a/Hem.html
+++ b/Hem.html
@@ -83,7 +83,7 @@
         <div class="u-container-style u-expanded-width-xs u-group u-shape-rectangle u-group-1">
           <div class="u-container-layout u-container-layout-1">
             <h2 class="u-custom-font u-text u-text-body-alt-color u-text-1" data-lang-en="<span class=&quot;u-text-palette-3-base&quot;>BBQ</span> Party" data-lang-sv="<span class=&quot;u-text-palette-3-base&quot;>BBQ</span> Party">
-              <span style="color: rgb(241, 197, 14);">DagenS&nbsp;</span>
+              <span style="color: rgb(241, 197, 14);">DAGENS&nbsp;</span>
               <span class="u-text-white"> LUNCH</span>
             </h2>
             <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, dryck, kaffe och kaka ingår</h3>
