--- a/Pizza.html
+++ b/Pizza.html
@@ -81,7 +81,7 @@
       <div class="u-clearfix u-sheet u-sheet-1">
         <div class="u-align-center u-container-style u-expanded-width-xs u-group u-shape-rectangle u-group-1">
           <div class="u-container-layout u-valign-middle-lg u-valign-middle-md u-valign-middle-sm u-valign-middle-xl u-valign-top-xs u-container-layout-1">
-            <h5 class="u-text u-text-white u-text-1">pIZZA​&nbsp;<span class="u-text-palette-3-base" style=""> meny</span>
+            <h5 class="u-text u-text-white u-text-1">PIZZA​&nbsp;<span class="u-text-palette-3-base" style=""> MENY</span>
             </h5>
           </div>
         </div>
