--- a/index.html
+++ b/index.html
@@ -88,14 +88,14 @@
             </h2>
             <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, dryck, kaffe och kaka ingår</h3>
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
-              <li>Pannkaka med sylt och grädde</li>
-              <li>Ärtsoppa</li>
-              <li>Fläskfilé med grönpepparsås och stekt potatis</li>
-              <li>Ångad fisk med gröna ärtor, dansk remoulad och kokt potatis</li>
+              <li>Hemgjorda högrevsburgare med bröd, coleslaw och pommes </li>
+              
+              
+              <li>Fisk och skaldjursgryta med aioli och kokt potatis</li>
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta carbonara</li>
               <li>Capricciosa</li>
-              <li>Tonfisksallad</li>
+              <li>Ost och skinksallad</li>
             </ul>
           </div>
         </div>
