--- a/Hem.html
+++ b/Hem.html
@@ -88,7 +88,9 @@
             </h2>
             <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, dryck, kaffe och kaka ingår</h3>
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
-              <li>Högrevsburgare med coleslaw och pommes</li>
+             <h3>Trevlig helg, vi ses på måndag igen!</h3>
+		    <!--
+		    <li>Högrevsburgare med coleslaw och pommes</li>
               
               <li>Fiskgratäng med kokt potatis</li>
               <li>Falukorv med stekt ägg och stekt potatis</li>
@@ -96,6 +98,7 @@
               <li>Capricciosa</li>
               <li>Tonfisksallad</li>
             </ul>
+		    -->
           </div>
         </div>
       </div>
