--- a/Home.html
+++ b/Home.html
@@ -85,13 +85,16 @@
             </h2>
             <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, dryck, kaffe och kaka ingår</h3>
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
-              <li>&nbsp;Lasagne med tomatsås</li>
+             <h3>Trevlig helg, vi ses på måndag igen!</h3>
+		    <!--
+		    <li>&nbsp;Lasagne med tomatsås</li>
               <li>Panerad fisk med kokt potatis och remouladsås</li>
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta carbonara</li>
               <li>Capriccosa</li>
               <li>Kycklingsallad</li>
             </ul>
+		    -->
           </div>
         </div>
       </div>
