--- a/index.html
+++ b/index.html
@@ -88,15 +88,15 @@
             </h2>
             <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, dryck, kaffe och kaka ingår</h3>
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
-              <h3>Trevlig helg, ses på måndag igen!</h3>
-		    <!--
-		    <li>Hemgjorda högrevsburgare med bröd, coleslaw och pommes </li>
-              <li>Fisk och skaldjursgryta med aioli och kokt potatis</li>
+             <!-- <h3>Trevlig helg, ses på måndag igen!</h3> -->
+		    
+		    <li>Chili con carne med ris </li>
+              <li>Ångad fisk med spenatstuvning och kokt potatis</li>
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta carbonara</li>
               <li>Capricciosa</li>
-              <li>Ost och skinksallad</li>
-		    -->
+              <li>Tonfisksallad</li>
+		    
             </ul>
           </div>
         </div>
