--- a/Hem.html
+++ b/Hem.html
@@ -90,9 +90,10 @@
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
              <!--<h3>Trevlig helg, vi ses på måndag igen!</h3> -->
 		    
-		    <li>Chili con carne med ris</li>
+		    <li>Stekt fläsk med raggmunk och lingon</li>
               
-              <li>Ångad fisk med spenatstuvning och kokt potatis</li>
+              <li>Panerad flundra med räkröra och kokt potatis</li>
+		    <li>Pyttipanna med stekt ägg och rödbetor</li>
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta carbonara</li>
               <li>Capricciosa</li>
