--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           <span class="u-text-white"> TURQUOISE</span>
         </h1>
         <p class="u-large-text u-text u-text-variant u-text-2">Snart drar vi igång julbord! Håll ögonen öppna, men redan nu kan ni boka för större sällskap from 1/11, bara att ringa eller mejla!</p>
-        <p class="u-large-text u-text u-text-variant u-text-3" data-lang-sv="Snart drar vi igång julbord! Håll ögonen öppna, men redan nu kan ni boka för större sällskap, bara att ringa eller mejla!">I helgen kör vi våra hemgjorda högrevsburgare med bröd + stor stark för 149:-</p>
+        <p class="u-large-text u-text u-text-variant u-text-3" data-lang-sv="Snart drar vi igång julbord! Håll ögonen öppna, men redan nu kan ni boka för större sällskap, bara att ringa eller mejla!"></p>
         <p class="u-text u-text-4">Välkommna<span class="u-text-white"> !</span>
         </p>
       </div>
