--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <li>Kycklingpasta</li>
               <li>Hawaii</li>
 		    <li>Kebabtallrik</li>
-              <li>Ost och skinksallad</li>
+              <li>Tonfisksallad</li>
             </ul>
           </div>
         </div>
