--- a/Hem.html
+++ b/Hem.html
@@ -90,13 +90,13 @@
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
              <!--<h3>Trevlig helg, vi ses på måndag igen!</h3> -->
 		    
-		    <li>Panerad kycklingfilé med paprikasås och rostad potatis</li>
+		    <li>Pepparbiff med café de parissmör, rödvinssky och friterad potatis</li>
               
-              <li>Havets wallenbergare med gröna ärtor, lingon, brynt smör och kokt potatis</li>
+              <li>Havets wallenbergare med lingon, brynt smör och kokt potatis</li>
 		    <li>Pyttipanna med stekt ägg och rödbetor</li>
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Kycklingpasta</li>
-              <li>Hawaii</li>
+              <li>Pizza Hawaii</li>
 		    <li>Kebabtallrik</li>
               <li>Tonfisksallad</li>
             </ul>
