--- a/index.html
+++ b/index.html
@@ -88,17 +88,18 @@
             </h2>
             <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, dryck, kaffe och kaka ingår</h3>
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
-             <h3>Trevlig helg, ses på måndag igen!</h3> 
-		    <!-- 
-		    <li>Pepparbiff med café de parissmör, rödvinssky och friterad potatis</li>
+             <!-- 
+		    <h3>Trevlig helg, ses på måndag igen!</h3> -->
+		   
+		    <li>Rimmad oxbringa med pepparotssky och rotmos</li>
               
-              <li>Havets wallenbergare med lingon, brynt smör och kokt potatis</li>
+              <li>Fish and chips med aioli och citron</li>
 		    <li>Pyttipanna med stekt ägg och rödbetor</li>
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Kycklingpasta</li>
               <li>Pizza Hawaii</li>
 		    <li>Kebabtallrik</li>
-              <li>Tonfisksallad</li> -->
+              <li>Tonfisksallad</li> 
             </ul>
           </div>
         </div>
