--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
               <li>Kycklingpasta</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
-              <li>Ost och skinksalladsallad</li> 
+              <li>Ost och skinksallad</li> 
             </ul>
           </div>
         </div>
