--- a/Hem.html
+++ b/Hem.html
@@ -99,7 +99,7 @@
               <li>Kycklingpasta</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
-              <li>Ost och skinksalladsallad</li> 
+              <li>Ost och skinksallad</li> 
           </div>
         </div>
       </div>
@@ -112,7 +112,7 @@
         </h1>
         <p class="u-large-text u-text u-text-variant u-text-2">Snart drar vi igång julbord! Håll ögonen öppna, men redan nu kan ni boka för större sällskap from 1/11, bara att ringa eller mejla!</p>
         <p class="u-large-text u-text u-text-variant u-text-3" data-lang-sv="Snart drar vi igång julbord! Håll ögonen öppna, men redan nu kan ni boka för större sällskap, bara att ringa eller mejla!"></p>
-         <p class="u-large-text u-text u-text-variant u-text-2">I helgen kör vi pyttipanna + stor stark för 129:-</p>
+        <!-- <p class="u-large-text u-text u-text-variant u-text-2">I helgen kör vi pyttipanna + stor stark för 129:-</p> -->
         <p class="u-text u-text-4">Välkommna<span class="u-text-white"> !</span>
 	    
         </p>
