--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 		     <li>Kryddiga järpar med bulgur och tzatziki</li>
               
               <li>Pestobakad fisk med vitvinsås och kokt potatis</li>
-		   
+		 <li>Kycklingwok med risnudlar</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta kyckling</li>
               <li>Pizza hawaii</li>
