--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 		
 		   <!--    <h3>Trevlig helg, vi ses på måndag igen!</h3> -->
 		    
-		     <li>Kryddiga järpar med bulgur och tzatziki</li>
+		     <li>Kycklingsnitzel med chilibearnaise, rödvinssås och rostad potatis</li>
               
-              <li>Pestobakad fisk med vitvinsås och kokt potatis</li>
+              <li>Fiskgratäng med kokt potatis</li>
 		 <li>Kycklingwok med risnudlar</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta kyckling</li>
