--- a/index.html
+++ b/index.html
@@ -112,10 +112,11 @@
           <span style="color: rgb(241, 197, 14);">HÄNDER PÅ&nbsp;</span>
           <span class="u-text-white"> TURQUOISE</span>
         </h1>
-        <p class="u-large-text u-text u-text-variant u-text-2">Snart drar vi igång julbord! Håll ögonen öppna, men redan nu kan ni boka för större sällskap from 1/11, bara att ringa eller mejla!</p>
+        <p class="u-large-text u-text u-text-variant u-text-2">På fredag 17/11 så kör vi igång julbord från kl 16:00 samt lördag från kl 15:00. Det kommer att
+	serveras alla favoriter som sill, lax, kål, köttbullar, prinskorv och mycket mera! </p>
         <p class="u-large-text u-text u-text-variant u-text-3" data-lang-sv="Snart drar vi igång julbord! Håll ögonen öppna, men redan nu kan ni boka för större sällskap, bara att ringa eller mejla!"></p>
 	     <!-- <p class="u-large-text u-text u-text-variant u-text-2">I helgen kör vi pyttipanna + stor stark för 129:-</p> -->
-        <p class="u-text u-text-4">Välkommna<span class="u-text-white"> !</span>
+        <p class="u-text u-text-4">Vi önskar er hjärtligt välkommna<span class="u-text-white"> !</span>
         </p>
       </div>
     </section>
