--- a/Pasta.html
+++ b/Pasta.html
@@ -2,7 +2,7 @@
 <html style="font-size: 16px;" lang="sv-SE"><head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
-    <meta name="keywords" content="Pizza, kebab, lunch, ala carte, pasta, öl och vin, Ljusterö">
+    <meta name="keywords" content="Turquoise, Pizza, pasta, sallad, kebab, lunch, ala carte, julbord, after work, öl, vin">
     <meta name="description" content="Restaurang och pizzeria på Ljusterö torg">
     <title>Pasta</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
