--- a/Hem.html
+++ b/Hem.html
@@ -115,7 +115,8 @@
         </h1>
         <p class="u-large-text u-text u-text-variant u-text-2">På fredag 17/11 så kör vi igång julbord från kl 16:00 samt lördag från kl 15:00. Det kommer att
 	serveras alla gamla favoriter som sill, lax, kål, köttbullar, prinskorv och mycket mera! 349:- </p>
-        <p class="u-large-text u-text u-text-variant u-text-3" data-lang-sv="text 3 drar vi igång julbord! Håll ögonen öppna, men redan nu kan ni boka för större sällskap, bara att ringa eller mejla!"></p>
+        <p class="u-large-text u-text u-text-variant u-text-3" data-lang-sv="På fredag 17/11 så kör vi igång julbord från kl 16:00 samt lördag från kl 15:00. Det kommer att
+	serveras alla gamla favoriter som sill, lax, kål, köttbullar, prinskorv och mycket mera! 349:- "></p>
         <!-- <p class="u-large-text u-text u-text-variant u-text-2">I helgen kör vi pyttipanna + stor stark för 129:-</p> -->
         <p class="u-text u-text-4">Välkommna<span class="u-text-white"> !</span>
 	    
