--- a/index.html
+++ b/index.html
@@ -92,13 +92,13 @@
 		
 		   <!--    <h3>Trevlig helg, vi ses på måndag igen!</h3> -->
 		    
-		     <li>Stekt fläsk med löksås, lingon och kokt potatis</li>
-               <li>Panerad kyckling med rostad vitlökssky, bearnaisesås och stekt potatis</li>
-              <li>Halstrad lax med stekt ris och asiatisk dressing </li>
+		     <li>Grillad fläskkarré med pepparsås och rostad potatis</li>
+        
+              <li>Krämig fiskgryta med kokt potatis</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta kyckling</li>
-              <li>Pizza al tonno</li>
+              <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
               <li>Ost och skinksallad</li>  
             </ul>
