--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
 		
 		   <!--    <h3>Trevlig helg, vi ses på måndag igen!</h3> -->
 		    
-		     <li>Grillad fläskkarré med pepparsås och rostad potatis</li>
+		    <li>öttfärslimpa med gräddsås, svartvinbärsgelé, pressgurka och kokt potatis</li>
         
-              <li>Krämig fiskgryta med kokt potatis</li>
+              <li>Havets wallenbergare med gröna ärtor, lingon, brynt smör och kokt potatis</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta kyckling</li>
