--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
 		
 		   <!--    <h3>Trevlig helg, vi ses på måndag igen!</h3> -->
 		    
-		    <li>öttfärslimpa med gräddsås, svartvinbärsgelé, pressgurka och kokt potatis</li>
+		    <li>Kycklingspett med tomatsås, chili- och saffransaioli samt ris</li>
         
-              <li>Havets wallenbergare med gröna ärtor, lingon, brynt smör och kokt potatis</li>
+              <li>Fiskgratäng med gröna ärtor och kokt potatis</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Pasta kyckling</li>
+              <li>Pasta carbonara</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
               <li>Ost och skinksallad</li>  
