--- a/Hem.html
+++ b/Hem.html
@@ -115,7 +115,7 @@
           <span style="color: rgb(241, 197, 14);">HÄNDER PÅ&nbsp;</span>
           <span class="u-text-white"> TURQUOISE</span>
         </h1>
-        <p class="u-large-text u-text u-text-variant u-text-2">På fredag 17/11 så kör vi igång julbord från kl 16:00 samt lördag från kl 15:00. Det kommer att
+        <p class="u-large-text u-text u-text-variant u-text-2">På fredag och lördag har vi julbord. Det kommer att
 	serveras alla gamla favoriter som sill, lax, kål, köttbullar, prinskorv och mycket mera! <br>349:- </p>
         <p class="u-large-text u-text u-text-variant u-text-3" data-lang-sv="På fredag 17/11 så kör vi igång julbord från kl 16:00 samt lördag från kl 15:00. Det kommer att
 	serveras alla gamla favoriter som sill, lax, kål, köttbullar, prinskorv och mycket mera! 349:- "></p>
