--- a/Hem.html
+++ b/Hem.html
@@ -90,8 +90,9 @@
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
              
 		
-		   <li>Biffsroganoff med ris</li>
-		    <li>Stekt strömming med gröna ärtor, lingon,skirat smör och potatismos</li>
+		   <li>Fläsknoisette med bacon och purjo, bearnaise, rödvinsås samt friterad potatis</li>
+		    <li>Laxpudding med skirat smör</li>
+		    <li>Fiskgratäng med kokt potatis</li>
 
 		      <li>Pyttipanna med stekt ägg och rödbetor</li>
 		    
