--- a/Hem.html
+++ b/Hem.html
@@ -88,13 +88,13 @@
             </h2>
             <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, dryck, kaffe och kaka ingår</h3>
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
-               <li>Gulashgryta med ris eller potatis</li>
-		    <li>Ångad fisk och skagenröra med rökt lax samt kokt potatis</li>
+               <li>Stekt fläsk med löksås, lingon och kokt potatis</li>
+		    <li>Örtbakad fisk med vitvinsås och kokt potatis</li>
 		    
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta bolognese</li>
-              <li>Pizza vesuvio</li>
+              <li>Pizza capricciosa</li>
 		    <li>Kebabtallrik</li>
               <li>Ost och skinksallad</li>  
             </ul>
