--- a/Hem.html
+++ b/Hem.html
@@ -89,8 +89,8 @@
             <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, dryck, kaffe och kaka ingår</h3>
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
-		  <li>Kryddstekt kyckling med sweetchili-majonäs och bulgur</li>
-		    <li>Panerad flundra med remouladsås och kokt potatis</li>
+		  <li>Wallenbergare med rårörda lingon, gröna ärtor, skirat smör samt potatismos</li>
+		    <li>Fiskgratäng med kokt potatis</li>
 		    
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
