--- a/Hem.html
+++ b/Hem.html
@@ -94,7 +94,7 @@
 		    
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Pasta bolognese</li>
+              <li>Pasta carbonara</li>
               <li>Pizza capricciosa</li>
 		    <li>Kebabtallrik</li>
               <li>Ost och skinksallad</li>  
