--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta bolognese</li>
-              <li>Pizza capricciosa</li>
+              <li>Pizza carbonara</li>
 		    <li>Kebabtallrik</li>
               <li>Ost och skinksallad</li>  
             </ul>
