--- a/Hem.html
+++ b/Hem.html
@@ -89,13 +89,14 @@
             <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, dryck, kaffe och kaka ingår</h3>
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
-		  <li>Fläskkotlett med balsamicosky, rostad broccoli och potatisgratäng</li>
-		    <li>Laxfjäril med krämig hummersås och potatisstomp</li>
-		    
+	  
+		  <li>Fläskgryta med kokt potatis</li>
+		    <li>Ångad fisk med dill och gräslökssås samt kokt potatis</li>
+		    <li>Pyttipanna med stekt ägg och rödbetor</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Pasta kyckling</li>
-              <li>Pizza hawaii</li>
+              <li>Pasta bolognese</li>
+              <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
               <li>Ost och skinksallad</li>  
             </ul>
