--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		       
 
 
-		  <li>Stekt fläsk med med raggmunk eller kokt potatis, lingon samt löksås</li>
+		  <li>Stekt fläsk med raggmunk eller kokt potatis, lingon samt löksås</li>
 		    <li>Gravad lax med citron och dillstuvad potatis</li>
 		    <li>Pyttipanna med stekt ägg och rödbetor</li>
 		 <li>Hamburgare 150g med pommes</li>     
