--- a/index.html
+++ b/index.html
@@ -94,8 +94,9 @@
 		       
 
 
-		  <li>Stekt fläsk med raggmunk eller kokt potatis, lingon samt löksås</li>
-		    <li>Gravad lax med citron och dillstuvad potatis</li>
+		  <li>Kålpudding med rårörda lingon, gräddsås och kokt potatis</li>
+		    <li>Dillbakad fisk med senapsgrädde och rotfrukter</li>
+		    <li>Tjocka revben med pommes och sweetchili dressing</li>
 		    <li>Pyttipanna med stekt ägg och rödbetor</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
