--- a/Hem.html
+++ b/Hem.html
@@ -90,12 +90,13 @@
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
 	  
-		  <li>Stekt fläsk med raggmunk eller kokt potatis, lingon samt löksås</li>
-		    <li>Gravad lax med citron och dillstuvad potatis</li>
+		  <li>Kålpudding med rårörda lingon, gräddsås och kokt potatis</li>
+		    <li>Dillbakad fisk med senapsgrädde och rotfrukter</li>
+		    <li>Tjocka revben med pommes och sweetchili dressing</li>
 		    <li>Pyttipanna med stekt ägg och rödbetor</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Pasta bolognese</li>
+              <li>Pasta kyckling</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
               <li>Ost och skinksallad</li>  
