--- a/index.html
+++ b/index.html
@@ -94,13 +94,13 @@
 		       
 
 
-		  <li>Kålpudding med rårörda lingon, gräddsås och kokt potatis</li>
-		    <li>Dillbakad fisk med senapsgrädde och rotfrukter</li>
+		  <li>Baconlindad kyckling med svampsky och friterad potatis</li>
+		    <li>Örtbakad fisk med gräddsås och kokt potatis</li>
 		    <li>Tjocka revben med pommes och sweetchili dressing</li>
 		    <li>Pyttipanna med stekt ägg och rödbetor</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Pasta kyckling</li>
+              <li>Pasta carbonara</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
               <li>Ost och skinksallad</li>  
