--- a/index.html
+++ b/index.html
@@ -115,8 +115,12 @@
           <span style="color: rgb(241, 197, 14);">HÄNDER PÅ&nbsp;</span>
           <span class="u-text-white"> TURQUOISE</span>
         </h1>
-        <p class="u-large-text u-text u-text-variant u-text-2">På fredag 17/11 så kör vi igång julbord från kl 16:00 samt lördag från kl 15:00. Det kommer att
-	serveras alla gamla favoriter som sill, lax, kål, köttbullar, prinskorv och mycket mera! <br>349:- </p>
+        <p class="u-large-text u-text u-text-variant u-text-2">Under jul och mellandagar är våra öppettider <br>24/12	STÄNGT <br>25/11	12-18 <br>26/12	12-18
+		<br>27/12	10-18
+		<br>28/12	10-18
+		<br>29/12	10-20
+		<br>30/12	12-20
+		<br>31/12	STÄNGT </p>
         <p class="u-large-text u-text u-text-variant u-text-3" data-lang-sv="Snart drar vi igång julbord! Håll ögonen öppna, men redan nu kan ni boka för större sällskap, bara att ringa eller mejla!"></p>
 	    
 	      <!-- <p class="u-large-text u-text u-text-variant u-text-2">I helgen kör vi pyttipanna + stor stark för 129:-</p> -->
