--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 		       
 
 
-		  <li>Baconlindad kyckling med svampsky och friterad potatis</li>
-		    <li>Örtbakad fisk med gräddsås och kokt potatis</li>
+		  <li>Fläsknoisette med pepparotssky, senapsgrädde och rotfruktpytt</li>
+		    <li>Ångad fisk med stuvad grönkål och kokt potatis</li>
 		    <li>Tjocka revben med pommes och sweetchili dressing</li>
 		    <li>Pyttipanna med stekt ägg och rödbetor</li>
 		 <li>Hamburgare 150g med pommes</li>     
