--- a/Hem.html
+++ b/Hem.html
@@ -90,8 +90,8 @@
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
 	  
-		   <li>Baconlindad kyckling med svampsky och friterad potatis</li>
-		    <li>Örtbakad fisk med gräddsås och kokt potatis</li>
+		  		  <li>Fläsknoisette med pepparotssky, senapsgrädde och rotfruktpytt</li>
+		    <li>Ångad fisk med stuvad grönkål och kokt potatis</li>
 		    <li>Tjocka revben med pommes och sweetchili dressing</li>
 		    <li>Pyttipanna med stekt ägg och rödbetor</li>
 		 <li>Hamburgare 150g med pommes</li>     
