--- a/index.html
+++ b/index.html
@@ -94,13 +94,12 @@
 		       
 
 
-		  <li></li>
-		    <li></li>
-		    <li></li>
-		    <li>Pyttipanna med stekt ägg och rödbetor</li>
+		  <li>Kotlett med gräddsås och ris eller kokt potatis</li>
+		    <li>Gravad lax med dillstuvad potatis</li>
+		    
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Pasta carbonara</li>
+              <li>Pasta bolognese</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
               <li>Ost och skinksallad</li>  
