--- a/index.html
+++ b/index.html
@@ -94,15 +94,15 @@
 		       
 
 
-		  <li>Kotlett med gräddsås och ris eller kokt potatis</li>
-		    <li>Gravad lax med dillstuvad potatis</li>
-		    
+		  <li>Stekt fläsk med löksås, lingon och kokt potatis</li>
+		    <li>Panerad flundra med räkröra och kokt potatis</li>
+		    <li>Tjocka revben med coleslaw samt friterade potatismedaljonger</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta bolognese</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
-              <li>Ost och skinksallad</li>  
+              <li>Räksallad</li>  
             </ul>
           </div>
         </div>
