--- a/Hem.html
+++ b/Hem.html
@@ -90,15 +90,15 @@
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
 	  
-		   <li>Kotlett med gräddsås och ris eller kokt potatis</li>
-		    <li>Gravad lax med dillstuvad potatis</li>
-		    
+		   	  <li>Stekt fläsk med löksås, lingon och kokt potatis</li>
+		    <li>Panerad flundra med räkröra och kokt potatis</li>
+		    <li>Tjocka revben med coleslaw samt friterade potatismedaljonger</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta bolognese</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
-              <li>Ost och skinksallad</li>  
+              <li>Räksallad</li>  
             </ul>
             </ul>
           </div>
