--- a/Hem.html
+++ b/Hem.html
@@ -95,7 +95,7 @@
 		    <li>Tjocka revben med coleslaw samt friterade potatismedaljonger</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Pasta bolognese</li>
+              <li>Pasta carbonara</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
               <li>Räksallad</li>  
