--- a/index.html
+++ b/index.html
@@ -94,14 +94,15 @@
 		       
 
 
-		  <li>Stekt fläsk med löksås, lingon och kokt potatis</li>
-		    <li>Panerad flundra med räkröra och kokt potatis</li>
-		    <li>Tjocka revben med coleslaw samt friterade potatismedaljonger</li>
+		  <li>Mustig korvgryta med potatismos eller ris</li>
+		    <li>Örtbakad fisk med fänkålssås och potatismos</li>
+		    <li>Pyttipanna med rödbetor och stekt ägg</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta carbonara</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
+		    <li>Kycklingkebab med pommes</li>
               <li>Räksallad</li>  
             </ul>
           </div>
