--- a/Hem.html
+++ b/Hem.html
@@ -89,15 +89,15 @@
             <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, dryck, kaffe och kaka ingår</h3>
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
-	  
-		   	  <li>Stekt fläsk med löksås, lingon och kokt potatis</li>
-		    <li>Panerad flundra med räkröra och kokt potatis</li>
-		    <li>Tjocka revben med coleslaw samt friterade potatismedaljonger</li>
+	   <li>Mustig korvgryta med potatismos eller ris</li>
+		    <li>Örtbakad fisk med fänkålssås och potatismos</li>
+		    <li>Pyttipanna med rödbetor och stekt ägg</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta carbonara</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
+		    <li>Kycklingkebab med pommes</li>
               <li>Räksallad</li>  
             </ul>
             </ul>
