--- a/index.html
+++ b/index.html
@@ -94,12 +94,12 @@
 		       
 
 
-		  <li>Mustig korvgryta med potatismos eller ris</li>
-		    <li>Örtbakad fisk med fänkålssås och potatismos</li>
+		  <li>Wallenbergare med skirat smör, rårörda lingon, gröna ärtor samt kokt potatis</li>
+		    <li>Panerad flundra med remouladsås och kokt potatis</li>
 		    <li>Pyttipanna med rödbetor och stekt ägg</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Pasta carbonara</li>
+              <li>Pasta kyckling</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
 		    <li>Kycklingkebab med pommes</li>
