--- a/Hem.html
+++ b/Hem.html
@@ -89,16 +89,16 @@
             <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, dryck, kaffe och kaka ingår</h3>
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
-	   <li>Mustig korvgryta med potatismos eller ris</li>
-		    <li>Örtbakad fisk med fänkålssås och potatismos</li>
+	   <li>Wallenbergare med skirat smör, rårörda lingon, gröna ärtor samt kokt potatis</li>
+		    <li>Panerad flundra med remouladsås och kokt potatis</li>
 		    <li>Pyttipanna med rödbetor och stekt ägg</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Pasta carbonara</li>
+              <li>Pasta kyckling</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
 		    <li>Kycklingkebab med pommes</li>
-              <li>Räksallad</li>  
+              <li>Räksallad</li>   
             </ul>
             </ul>
           </div>
