--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 		       
 
 
-		  <li>Wallenbergare med skirat smör, rårörda lingon, gröna ärtor samt kokt potatis</li>
+		  <li>Wallenbergare med skirat smör, rårörda lingon, gröna ärtor samt potatismos</li>
 		    <li>Panerad flundra med remouladsås och kokt potatis</li>
 		    <li>Pyttipanna med rödbetor och stekt ägg</li>
 		 <li>Hamburgare 150g med pommes</li>     
