--- a/Hem.html
+++ b/Hem.html
@@ -86,7 +86,7 @@
               <span style="color: rgb(241, 197, 14);">DAGENS&nbsp;</span>
               <span class="u-text-white"> LUNCH</span>
             </h2>
-            <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, dryck, kaffe och kaka ingår</h3>
+            <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, måltidsdryck, kaffe och kaka ingår.     120:-</h3>
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
 	   <li>Wallenbergare med skirat smör, rårörda lingon, gröna ärtor samt potatismos</li>
