--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 		       
 
 
-		  <li>Wallenbergare med skirat smör, rårörda lingon, gröna ärtor samt potatismos</li>
-		    <li>Panerad flundra med remouladsås och kokt potatis</li>
+		  <li>Helstekt fläskfile med pepparsås och stekt potatis eller ris</li>
+		    <li>Panerad flundra med currydressing och kokt potatis</li>
 		    <li>Pyttipanna med rödbetor och stekt ägg</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
