--- a/Hem.html
+++ b/Hem.html
@@ -89,9 +89,9 @@
             <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, måltidsdryck, kaffe och kaka ingår.     120:-</h3>
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
-
-		  <li>Helstekt fläskfile med pepparsås och stekt potatis eller ris</li>
-		    <li>Panerad flundra med currydressing och kokt potatis</li>
+<h4>Måndag</h4>
+		  <li>Chiliconcarne med ris</li>
+		    <li>Ost och pestogratinerad fisk med tomatsås och kokt potatis</li>
 		    <li>Pyttipanna med rödbetor och stekt ägg</li>
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
