--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
 
               
 
-		  <li>Chili con carne med ris</li>
-		    <li>Ost och pestogratinerad fisk med tomatsås och kokt potatis</li>
-		    
+		  <li>Stekt fläsk med löksås, lingon och kokt potatis</li>
+		    <li>Panerad flundra med örtmajonäs och kokt potatis</li>
+		                  <li>Chorizo med bröd, rostad lök och räksallad</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta kyckling</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
 		    <li>Kycklingkebab med pommes</li>
-              <li>Räksallad</li>  
+
             </ul>
           </div>
         </div>
