--- a/Hem.html
+++ b/Hem.html
@@ -89,17 +89,15 @@
             <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, måltidsdryck, kaffe och kaka ingår.     120:-</h3>
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
-
-		  <li>Chili con carne med ris</li>
-		    <li>Ost och pestogratinerad fisk med tomatsås och kokt potatis</li>
-		    
+		  <li>Stekt fläsk med löksås, lingon och kokt potatis</li>
+		    <li>Panerad flundra med örtmajonäs och kokt potatis</li>
+		                  <li>Chorizo med bröd, rostad lök och räksallad</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta kyckling</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
 		    <li>Kycklingkebab med pommes</li>
-              <li>Räksallad</li>   
             </ul>
             </ul>
           </div>
