--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@
 
               
 
-		  <li>Stekt fläsk med löksås, lingon och kokt potatis</li>
-		    <li>Panerad flundra med örtmajonäs och kokt potatis</li>
+		  <li>Panerad kyckling med chilimajonäs och rostad potatis</li>
+		    <li>Ångad fisk med gräddsås och kokt potatis</li>
 		                  <li>Chorizo med bröd, rostad lök och räksallad</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Pasta kyckling</li>
+              <li>Pasta bolognese</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
 		    <li>Kycklingkebab med pommes</li>
