--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 
               
 
-		  <li>Panerad kyckling med chilimajonäs och rostad potatis</li>
-		    <li>Ångad fisk med gräddsås och kokt potatis</li>
+		  <li>Pannkaka med ärtsoppa, sylt och grädde</li>
+		    <li>Laxpudding med skirat smör</li>
 		                  <li>Chorizo med bröd, rostad lök och räksallad</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
