--- a/Hem.html
+++ b/Hem.html
@@ -89,8 +89,9 @@
             <h3 class="u-custom-font u-font-montserrat u-text u-text-body-alt-color u-text-2" data-lang-en="​​Hot and Delicious" data-lang-sv="​​Hot and Delicious"> Sallad, bröd, måltidsdryck, kaffe och kaka ingår.     120:-</h3>
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
-		 <li>Panerad kyckling med chilimajonäs och rostad potatis</li>
-		    <li>Ångad fisk med gräddsås och kokt potatis</li>
+
+		  <li>Pannkaka med ärtsoppa, sylt och grädde</li>
+		    <li>Laxpudding med skirat smör</li>
 		                  <li>Chorizo med bröd, rostad lök och räksallad</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
