--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 
               
 
-		  <li>Pannkaka med ärtsoppa, sylt och grädde</li>
+		  <li>Biffstroganoff med ris</li>
 		    <li>Laxpudding med skirat smör</li>
-		                  <li>Chorizo med bröd, rostad lök och räksallad</li>  
+		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta bolognese</li>
