--- a/Hem.html
+++ b/Hem.html
@@ -90,9 +90,9 @@
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
 
-		  <li>Pannkaka med ärtsoppa, sylt och grädde</li>
+				  <li>Biffstroganoff med ris</li>
 		    <li>Laxpudding med skirat smör</li>
-		                  <li>Chorizo med bröd, rostad lök och räksallad</li>  
+		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta bolognese</li>
