--- a/Hem.html
+++ b/Hem.html
@@ -90,8 +90,8 @@
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
 
-				 <li>Stekt fläsk med löksås, lingon och raggmunk</li>
-		    <li>Panerad flundra med räkröra och kokt potatis</li>
+				 <li>Currygryta med kyckling och ris</li>
+		    <li>Dillbakad fisk med citron och champinjonsås</li>
 		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
