--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
 
               
 
-		  <li>Köttfärslimpa med gräddsås, lingon, pressgurka och kokt potatis</li>
-		    <li>Laxkotlett med krämig tomatsås och kokt potatis</li>
+		  <li>Fläsknoisett med pepparsås och rostad potatis</li>
+		    <li>Fiskgryta med kokt potatis</li>
 		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
