--- a/Hem.html
+++ b/Hem.html
@@ -95,7 +95,7 @@
 		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Pasta bolognese</li>
+              <li>Pasta kyckling</li>
               <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
 		    <li>Kycklingkebab med pommes</li>
