--- a/Hem.html
+++ b/Hem.html
@@ -90,8 +90,8 @@
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
 
-				 <li>Fläsknoisett med pepparsås och rostad potatis</li>
-		    <li>Fiskgryta med kokt potatis</li>
+				 li>Biffstroganoff med ris</li>
+		    <li>Panerad flundra med kall sås och potatis</li>
 		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
