--- a/Hem.html
+++ b/Hem.html
@@ -90,13 +90,13 @@
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
 
-				 li>Biffstroganoff med ris</li>
-		    <li>Panerad flundra med kall sås och potatis</li>
+		 <li>Köttbullar med gräddsås, lingon och potatismos</li>
+		    <li>Örtbakad fisk med vitvinsås och potatis</li>
 		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Pasta kyckling</li>
-              <li>Pizza vesuvio</li>
+              <li>Pasta carbonara</li>
+              <li>Pizza hawaii</li>
 		    <li>Kebabtallrik</li>
 		    <li>Kycklingkebab med pommes</li>
             </ul>
