--- a/Hem.html
+++ b/Hem.html
@@ -90,7 +90,8 @@
             <ul class="u-text u-text-body-alt-color u-text-3" data-lang-sv="<li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 1</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 2</li><li><div class=&quot;u-list-icon hidden&quot;></div>Sample Item 3</li>">
               
 
-		 <li>Köttbullar med gräddsås, lingon och potatismos</li>
+
+		  <li>Kokt köttkorv med pepparotsstuvad blomkål, senap och kokt potatis</li>
 		    <li>Örtbakad fisk med vitvinsås och potatis</li>
 		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
