--- a/Hem.html
+++ b/Hem.html
@@ -92,8 +92,8 @@
 
 
 
-		  <li>Vildsvinsstek med vitlöksfrästa champinjoner, rödvinssås och potatisgratäng</li>
-		    <li>Panerad fisk med majonäs på rökt lax och räkor samt kokt potatis</li>
+		  <li>Ugnsgratinerad falukorv med potatismos</li>
+		    <li>Fisk i tomatsås med potatismos</li>
 		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
