--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta kyckling</li>
-              <li>Pizza capriccosa</li>
+              <li>Pizza fungi</li>
 		    <li>Kebabtallrik</li>
 		    <li>Kycklingkebab med pommes</li>
 
