--- a/Hem.html
+++ b/Hem.html
@@ -91,10 +91,9 @@
               
 
 
-
-	
-		  <li>Mörbakad fläskkarre med skysås, bearnaise och klyftpotatis</li>
-		    <li>Laxfjäril med hollandaisesås och kokt potatis</li>
+  <li>stekt fläsk med löksås och kokt potatis</li>
+		    <li>chili con carne med ris</li>
+		    <li>Panerad fisk med dill och räkröra samt kokt potatis</li>
 		                  <li>Pyttipanna med stekt ägg och rödbetor</li>  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
