--- a/Hem.html
+++ b/Hem.html
@@ -102,6 +102,8 @@
               <li>Pizza capriccosa</li>
 		    <li>Kebabtallrik</li>
 		    <li>Kycklingkebab med pommes</li>
+		     <li>Ost och skinksallad</li>
+		    
             </ul>
             </ul>
           </div>
