--- a/Hem.html
+++ b/Hem.html
@@ -92,9 +92,9 @@
 
 
  
-<li>Pannbiff med gräddsås, svartvinbärsgele och kokt potatis</li>
+	  <li>Snitzel med rödvinsås, persiljesmör, kapris, citron och persiljesmör samt stekt potatis</li>
 		    
-		    <li>Röd currygratinerad fisk och kokt potatis</li>
+		    <li>Fiskgryta med kokt potatis</li></li>
 		           <li>Pyttipanna med stekt ägg och rödbetor</li>        
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
