--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
 
               
 
-		  <li>Snitzel med rödvinsås, persiljesmör, kapris, citron och persiljesmör samt stekt potatis</li>
+		  <li>Kryddig kycklingfile med sweetchilimajonäs och bulgur</li>
 		    
-		    <li>Fiskgryta med kokt potatis</li>
+		    <li>Panerad fisk med hollandaisesås och kokt potatis</li>
 		           <li>Pyttipanna med stekt ägg och rödbetor</li>        
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
-              <li>Vegetarisk pasta</li>
+              <li>Pasta carbonara</li>
               <li>Pizza hawaii</li>
 		    <li>Kebabtallrik</li>
 		    <li>Kycklingkebab med pommes</li>
