--- a/Hem.html
+++ b/Hem.html
@@ -93,7 +93,7 @@
 
  
 	
-		  <li>Kryddig kycklingfile med sweetchilimajonäs och bulgur</li>
+		  <li>stekt fläsk, lingon och kokt potatis</li>
 		    
 		    <li>Panerad fisk med hollandaisesås och kokt potatis</li>
 		           <li>Pyttipanna med stekt ägg och rödbetor</li>        
