--- a/Hem.html
+++ b/Hem.html
@@ -92,16 +92,17 @@
 
 
  
-	<li>Snitzel med skysås, persiljesmör och rostad potatis</li>
-		 		    <li>Örtbakad flundra med citroncreme och kokt potatis</li>
+			  <li>Snıtzel med rödvinssås, bearnaise och rostad potatis eller pommes</li>
+		    		  <li>Helstekt ryggbiff med rödvinssås, bearnaise och rostad potatis eller pommes</li>
+		    <li>Panerad fisk med rökt lax- och räkröra samt kokt potatis</li>
 		                  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
               <li>Pasta bolognese</li>
-              <li>Pizza fungi</li>
+              <li>Pizza vesuvio</li>
 		    <li>Kebabtallrik</li>
 		    <li>Kycklingkebab med pommes</li>
-		     <li>Grekisk sallad</li>
+		     <li>Ost och skinksallad</li>
 		    
             </ul>
             </ul>
