--- a/Hem.html
+++ b/Hem.html
@@ -92,9 +92,10 @@
 
 
  
-			  <li>Snıtzel med rödvinssås, bearnaise och rostad potatis eller pommes</li>
-		    		  <li>Helstekt ryggbiff med rödvinssås, bearnaise och rostad potatis eller pommes</li>
-		    <li>Panerad fisk med rökt lax- och räkröra samt kokt potatis</li>
+
+		  <li>Panerad kyckling med kryddig paprikasås och ris</li>
+		    		  
+		    <li>Laxfjäril med gräddsås och ris</li>
 		                  
 		 <li>Hamburgare 150g med pommes</li>     
               <li>Falukorv med stekt ägg och stekt potatis</li>
