--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
        
         <h2 class="font-cormorant">Dagens lunch!</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
-            <ul>Panerad kyckling</ul>
-            <ol>Stekt strömming</ol>
+            <ol>Lasagne</ol>
+            <ol>Lax med vitvinsås och kokt potatis</ol>
             <ol>Kycklinghamburgare med pommes</ol>
             <ol>Hamburgertallrik 150g</ol>
             <ol>Kyckling-kebabtallrik</ol>
