--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
             <ol>Hamburgertallrik 150g</ol>
             <ol>Kyckling-kebabtallrik</ol>
             <ol>Kebabtallrik</ol>
+            <ol>Falukorv med ägg och stekt potatis</ol>
             <ol>Cevapcici med tzatziki, ajvar och pommes</ol>
             <ol>Ost och skinksallad</ol>
 
