--- a/alacarte.html
+++ b/alacarte.html
@@ -186,6 +186,7 @@
             Ljusterö torg 8<br>
             18495<br>
             Ljusterö</p>
+         <br> <h4>Telefon:</h4><p>076 041 32 66</p>
             <br> <h4>Epost adress:</h4><p>turquaz2023@gmail.com</p>
            
           </div>
