--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
        
         <h2 class="font-cormorant">Dagens lunch! 08/22</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
-            <ol>Kycklinggratäng med ris</ol>
-            <ol>Panerad fisk och kokt potatis</ol>
+            <ul>Rostbiff med skysås och potatisgratäng</ul>
+            <ol>Grillad laxmed vitvinssås och kokt potatis</ol>
             <ol>Lasagne med tomatsås</ol>
             <ol>Kycklingburgertallrik med pommes</ol>
             <ol>Hamburgertallrik 150g</ol>
