--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
        
         <h2 class="font-cormorant">Dagens lunch! 08/23</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
-            <ul></ul>
-             <ul>Rostbiff med skysås och potatisgratäng</ul>
-            <ol>Grillad lax med vitvinssås och kokt potatis</ol>
+            
+             <ul>Korvstroganoff med ris</ul>
+            <ol>Stekt strömming med potatispuré, skirat smör och lingon </ol>
             <ol>Lasagne med tomatsås</ol>
             <ol>Kycklingburgertallrik med pommes</ol>
             <ol>Hamburgertallrik 150g</ol>
