--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
         <h2 class="font-cormorant">Dagens lunch! 08/23</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
             
-             <ul>Korvstroganoff med ris</ul>
-            <ol>Stekt strömming med potatispuré, skirat smör och lingon </ol>
+             <ul>Stekt fläsk med löksås, lingon och kokt potatis</ul>
+            <ol>Fetaostbakad lax med röd pesto och grönsaksrisotto </ol>
+            <ol>Sjömansbiff med rödbetor</ol>
             <ol>Lasagne med tomatsås</ol>
             <ol>Kycklingburgertallrik med pommes</ol>
             <ol>Hamburgertallrik 150g</ol>
