--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         <h2 class="font-cormorant">Dagens lunch! 08/23</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
             
-             <ul>Stekt fläsk med löksås, lingon och kokt potatis</ul>
-            <ol>Fetaostbakad lax med röd pesto och grönsaksrisotto </ol>
-            <ol>Sjömansbiff med rödbetor</ol>
-            <ol>Lasagne med tomatsås</ol>
+             <ul>Fläskfilé med pepparsås och klyftpotatis</ul>
+            <ol>Panerad fisk med remouladsås och kokt potatis </ol>
+            <ol></ol>
+            <ol>Fisk och skaldjurspasta</ol>
             <ol>Kycklingburgertallrik med pommes</ol>
             <ol>Hamburgertallrik 150g</ol>
             <ol>Kyckling-kebabtallrik</ol>
