--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         <h2 class="font-cormorant">Dagens lunch! 08/29</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
             
-             <ul>Köttfärslimpa med gräddsås, pressgurka och kokt potatis</ul>
-            <ol>Oliv och tomatbakad fisk med citronsås och kokt potatis</ol>
+             <ul>Baconlindad kyckling med kantarellsås och stekt potatis</ul>
+            <ol>Panerad fisk med chilimajonäs samt kokt potatis</ol>
             <ol></ol>
-            <ol>Fisk och skaldjurspasta</ol>
+            <ol>Fläskfilépasta med svampsås</ol>
             <ol>Kycklingburgertallrik med pommes</ol>
             <ol>Hamburgertallrik 150g</ol>
             <ol>Kyckling-kebabtallrik</ol>
