--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         <h2 class="font-cormorant">Dagens lunch! 09/05</h2><h2 class="font-cormorant"> </h2>
         <li class="lunch">
             
-             <ul>Korvgryta med ris</ul>
-            <ol>Stekt strömming med potatismos, skirat smör och lingon</ol>
+             <ul>Fläsknoisette med bearnaise, rödinssky och rostat potatis</ul>
+            <ol>Dillbakad fisk med äggsås och kokt potatis</ol>
             <ol>Pizza 1-3</ol>
-            <ol>Kyckling och baconpasta med currysås</ol>
+            <ol>Pasta bolognese</ol>
             <ol>Kycklingburgertallrik med pommes</ol>
             <ol>Hamburgertallrik 150g</ol>
             <ol>Kyckling-kebabtallrik</ol>
